Replace deprecated API to Class.newInstance()